#34614 : Bunker Plan - Readability issue

--- a/assets/sass/themes/defaultweb/_dark_theme.scss
+++ b/assets/sass/themes/defaultweb/_dark_theme.scss
@@ -1271,19 +1271,22 @@ $denim: #5780A6;
 			color: $denim;
 		}
 		.label-text {
-			color: $darkl4;
+			//color: $darkl4;
+			color:#E4F6FF;
 		}
 		.separator {
 			color: $darkl4;
 		}
 		.sml-txt {
-			color: $darkl4;
+			// color: $darkl4;
+			color:#E4F6FF;
 		}
 		.default-view {
 			color: $theme-font;
 		}
 		.reminder-view {
-			color: #8F9BAB;
+			// color: #8F9BAB;
+			color:#E4F6FF;
 		}
 		.value {
 			color: $theme-font;
